syntax="proto3";

package blockjoy.api;

import "api_messages.proto";

// see https://discord.com/channels/835766935719247873/968766899884294174/994894495348949073
service Commands {
  // reflects https://stakejoy.stoplight.io/docs/blockvisor-api/c29cd342db7f6-update-command-response
  rpc UpdateCommand(UpdateCommandResultRequest) returns (UpdateCommandResultResponse) {}
}